name:                ringo-app
version:             0.1.0.0
synopsis:            OLTP to OLAP schema transformer
description:         Tool to transform OLTP schemas to OLAP star schemas automatically
homepage:            http://github.com/abhin4v/ringo
license:             MIT
license-file:        LICENSE
author:              Abhinav Sarkar
maintainer:          abhinav@abhinavsarkar.net
copyright:           2015-2016 Quintype Inc, Nilenso Software LLP, Abhinav Sarkar
category:            SQL
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

executable ringo
  hs-source-dirs:      src
  other-modules:       Ringo.ArgParser,
                       Ringo.InputParser,
                       Distribution.CurrentPackageDescription
  main-is:             Main.hs
  build-depends:       base                 >=4.7     && <5,
                       text                 >=1.2     && <1.3,
                       bytestring           >=0.10    && <0.11,
                       containers           >=0.5     && <0.6,
                       base-compat          >=0.6     && <1.0,
                       optparse-applicative >=0.11    && <0.13,
                       yaml                 >=0.8.11  && <0.9,
                       vector               >=0.10    && <0.12,
                       directory            >=1.2     && <1.3,
                       filepath             >=1.3     && <1.5,
                       aeson                >=0.8     && <1.1,
                       Cabal                >=1.18    && <1.25,
                       template-haskell     >=2.9     && <2.12,
                       ringo
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fno-warn-unused-do-bind
                       -fno-warn-orphans -funbox-strict-fields -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/abhin4v/ringo
